# laba4

./: CMakeLists.txt
ca/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  calculator.cpp  calculator.h  calculator_app  cmake_install.cmake  main.cpp  rules.ninja
